--- a/src/styles/list-menu.scss
+++ b/src/styles/list-menu.scss
@@ -82,6 +82,8 @@
       }
 
       .project-name {
+        overflow: hidden;
+        text-overflow: ellipsis;
         white-space: nowrap;
       }
 
